add home section

--- a/index.html
+++ b/index.html
@@ -19,5 +19,21 @@
         <a href="">Contact</a>
       </div>
     </nav>
+    <!-- Home section  -->
+    <div class="home">
+      <div class="home-heading">
+        <h1>Cofee with <em>Kaffi</em></h1>
+        <p>Aroma Therapy: Healing With Every sip</p>
+        <button>View Menu</button>
+
+        <div class="offer">
+          <img src="./images/liq.png" />
+        </div>
+      </div>
+
+      <div class="home-image">
+        <img src="./images/hom1.png" />
+      </div>
+    </div>
   </body>
 </html>
