adde some coffee picture

--- a/index.html
+++ b/index.html
@@ -35,5 +35,49 @@
         <img src="./images/hom1.png" />
       </div>
     </div>
+    <!-- coffee -->
+    <h2>Coffee</h2>
+    <div class="coffee-container">
+      <div class="coffee-cup">
+        <img src="./images/americano-removebg-.png" alt="" />
+        <h2>Amircano</h2>
+        <p>200ml cup</p>
+        <p>Expresso + Hot Water</p>
+      </div>
+
+      <div class="coffee-cup">
+        <img src="./images/flat_white-removebg-preview.png" alt="" />
+        <h2>Flat Whit</h2>
+        <p>200ml cup</p>
+        <p>Expresso + Steamed Milk</p>
+      </div>
+
+      <div class="coffee-cup">
+        <img src="./images/mocha-removebg-preview.png" alt="" />
+        <h2>Mocha</h2>
+        <p>200ml cup</p>
+        <p>Expresso + Milk + Chokolat</p>
+      </div>
+
+      <div class="coffee-cup">
+        <img src="./images/Cappuccino.png" alt="" />
+        <h2>Cappuccino</h2>
+        <p>200ml cup</p>
+        <p>Expresso + Water</p>
+      </div>
+
+      <div class="coffee-cup">
+        <img src="./images/Espressoo-removebg-preview.png" alt="" />
+        <h2>Espresso</h2>
+        <p>200ml cup</p>
+        <p>Expresso + Hot Water</p>
+      </div>
+      <div class="coffee-cup">
+        <img src="./images/Latte-removebg-preview.png" alt="" />
+        <h2>latte</h2>
+        <p>200ml cup</p>
+        <p>Expresso + Milk</p>
+      </div>
+    </div>
   </body>
 </html>
